envoy-subset-load-balancing/envoy-proxy.yaml
node:
  cluster: test-cluster
  id: test-id
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
    - name: backend
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 3000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: backend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend
        endpoints:
          - locality:
              region: fat1
              zone: sha
            load_balancing_weight: 1
            priority: 0 # highest
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-in-fat1
                      port_value: 8000
                  hostname: backend-in-fat1
          - locality:
              region: fat2
              zone: sha
            load_balancing_weight: 1
            priority: 0 # highest
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-in-fat2
                      port_value: 8000
                  health_check_config:
                    port_value: 8000
                  hostname: backend-in-fat2
          - locality:
              region: fat3
              zone: sha
            load_balancing_weight: 1
            priority: 0 # highest
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-in-fat3
                      port_value: 8000
                  health_check_config:
                    port_value: 8000
                  hostname: backend-in-fat3
          - locality:
              region: fws
              zone: sha
            load_balancing_weight: 1
            priority: 0 # highest
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-in-fws
                      port_value: 8000
                  health_check_config:
                    port_value: 8000
                  hostname: backend-in-fws
